@@ -769,7 +769,7 @@ static BinResponseHdr *deleteClass(BinRequestHdr * hdr, ProviderInfo * info, int
    CMPIFlags flgs=0;
 
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    _SFCB_TRACE(1, ("--- Calling provider %s",info->providerName));
    rci =  info->classMI->ft->deleteClass(info->classMI, ctx, result,path);
@@ -810,7 +810,7 @@ static BinResponseHdr *getClass(BinRequestHdr * hdr, ProviderInfo * info, int re
    if (req->flags & FL_includeQualifiers) flgs|=CMPI_FLAG_IncludeQualifiers;
    if (req->flags & FL_includeClassOrigin) flgs|=CMPI_FLAG_IncludeClassOrigin;
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    if (req->count>2) props=makePropertyList(req->count-2,req->properties);
 
@@ -849,7 +849,7 @@ static BinResponseHdr *createClass(BinRequestHdr * hdr, ProviderInfo * info,
    CMPIFlags flgs=0;
 
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
    
    _SFCB_TRACE(1, ("--- Calling provider %s",info->providerName));
    rci = info->classMI->ft->createClass(info->classMI, ctx, result, path, cls);
@@ -884,7 +884,7 @@ static BinResponseHdr *enumClassNames(BinRequestHdr * hdr,
    _SFCB_ENTER(TRACE_PROVIDERDRV, "enumClassNames");
 
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    _SFCB_TRACE(1, ("--- Calling provider %s",info->providerName));
 
@@ -926,7 +926,7 @@ static BinResponseHdr *enumClasses(BinRequestHdr * hdr,
    CMPIFlags flgs=req->flags;
 
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    _SFCB_TRACE(1, ("--- Calling provider %s",info->providerName));
 
@@ -962,7 +962,7 @@ static BinResponseHdr *invokeMethod(BinRequestHdr * hdr, ProviderInfo * info,
    CMPIFlags flgs=0;
 
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    if (req->count>5) {
       int i,s,n;
@@ -1026,7 +1026,7 @@ static BinResponseHdr *getInstance(BinRequestHdr * hdr, ProviderInfo * info,
    if (req->flags & FL_includeQualifiers) flgs|=CMPI_FLAG_IncludeQualifiers;
    if (req->flags & FL_includeClassOrigin) flgs|=CMPI_FLAG_IncludeClassOrigin;
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    if (req->count>2) props=makePropertyList(req->count-2,req->properties);
 
@@ -1065,7 +1065,7 @@ static BinResponseHdr *deleteInstance(BinRequestHdr * hdr, ProviderInfo * info, 
    CMPIFlags flgs=0;
 
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    _SFCB_TRACE(1, ("--- Calling provider %s",info->providerName));
    rci =  info->instanceMI->ft->deleteInstance(info->instanceMI, ctx, result,
@@ -1100,7 +1100,7 @@ static BinResponseHdr *createInstance(BinRequestHdr * hdr, ProviderInfo * info,
    int i;
 
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    _SFCB_TRACE(1, ("--- Calling provider %s",info->providerName));
    rci = info->instanceMI->ft->createInstance(info->instanceMI, ctx, result,
@@ -1141,7 +1141,7 @@ static BinResponseHdr *modifyInstance(BinRequestHdr * hdr, ProviderInfo * info,
 
    if (req->flags & FL_includeQualifiers) flgs|=CMPI_FLAG_IncludeQualifiers;
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    if (req->count>3) props=makePropertyList(req->count-3,req->properties);
 
@@ -1181,7 +1181,7 @@ static BinResponseHdr *enumInstances(BinRequestHdr * hdr, ProviderInfo * info,
    if (req->flags & FL_includeQualifiers) flgs|=CMPI_FLAG_IncludeQualifiers;
    if (req->flags & FL_includeClassOrigin) flgs|=CMPI_FLAG_IncludeClassOrigin;
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    if (req->count>2) props=makePropertyList(req->count-2,req->properties);
 
@@ -1212,7 +1212,7 @@ static BinResponseHdr *enumInstanceNames(BinRequestHdr * hdr,
    CMPIFlags flgs=0;
 
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    _SFCB_TRACE(1, ("--- Calling provider %s",info->providerName));
    rci = info->instanceMI->ft->enumInstanceNames(info->instanceMI, ctx, result,
@@ -1297,7 +1297,7 @@ static BinResponseHdr *execQuery(BinRequestHdr * hdr, ProviderInfo * info, int r
    int irc;
 
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    _SFCB_TRACE(1, ("--- Calling provider %s",info->providerName));
    rci = info->instanceMI->ft->execQuery(info->instanceMI, ctx, result, path,
@@ -1375,7 +1375,7 @@ static BinResponseHdr *associators(BinRequestHdr * hdr, ProviderInfo * info, int
    if (req->flags & FL_includeQualifiers) flgs|=CMPI_FLAG_IncludeQualifiers;
    if (req->flags & FL_includeClassOrigin) flgs|=CMPI_FLAG_IncludeClassOrigin;
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    if (req->count>6) props=makePropertyList(req->count-6,req->properties);
 
@@ -1414,7 +1414,7 @@ static BinResponseHdr *references(BinRequestHdr * hdr, ProviderInfo * info, int 
    if (req->flags & FL_includeQualifiers) flgs|=CMPI_FLAG_IncludeQualifiers;
    if (req->flags & FL_includeClassOrigin) flgs|=CMPI_FLAG_IncludeClassOrigin;
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    if (req->count>4) props=makePropertyList(req->count-4,req->properties);
 
@@ -1448,7 +1448,7 @@ static BinResponseHdr *associatorNames(BinRequestHdr * hdr, ProviderInfo * info,
    CMPIFlags flgs=0;
 
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    _SFCB_TRACE(1, ("--- Calling provider %s",info->providerName));
    rci = info->associationMI->ft->associatorNames(info->associationMI, ctx,
@@ -1481,7 +1481,7 @@ static BinResponseHdr *referenceNames(BinRequestHdr * hdr, ProviderInfo * info, 
    CMPIFlags flgs=0;
 
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    _SFCB_TRACE(1, ("--- Calling provider %s",info->providerName));
    rci = info->associationMI->ft->referenceNames(info->associationMI, ctx,
@@ -1520,7 +1520,7 @@ static BinResponseHdr *activateFilter(BinRequestHdr *hdr, ProviderInfo* info,
    char *type;
    
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    _SFCB_TRACE(1,("--- pid: %d activFilters %p %s",currentProc,activFilters,processName));
    for (se = activFilters; se; se = se->next) {
@@ -1603,7 +1603,7 @@ static BinResponseHdr *deactivateFilter(BinRequestHdr *hdr, ProviderInfo* info,
    CMPIFlags flgs=0;
    
    ctx->ft->addEntry(ctx,CMPIInvocationFlags,(CMPIValue*)&flgs,CMPI_uint32);
-   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)&req->principal.data,CMPI_chars);
+   ctx->ft->addEntry(ctx,CMPIPrincipal,(CMPIValue*)req->principal.data,CMPI_chars);
 
    resp = (BinResponseHdr *) calloc(1,sizeof(BinResponseHdr));
    resp->rc=1;
